# 1st_team_project

module_1/object_detection_gl_ros/: CMakeLists.txt  package.xml
module_1/object_detection_gl_ros/launch/: view_object_detection_gl_ros.launch
module_1/object_detection_gl_ros/msg/: obj_array.msg
module_1/object_detection_gl_ros/rviz/: config.rviz
module_1/object_detection_gl_ros/src/: object_detection_gl_ros_node.cpp  object_detection_sub_node.cpp  object_detection_sub_node2.cpp  project_sub_node.cpp  pub_test.cpp
module_2/: Mask-Auto-checking-project.py  MaskTraining.py  crawl.py  facial_mask.py
module_3/: Project_Global_Camera.py  ard_recive.ino  rc_car.ino  rc_car2.ino  threshhold_hsv.py
